--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,5 +4,11 @@ jobs:
   Testing:
     runs-on: ubuntu-latest
     steps:
-    - name: testing the workflow
-      run: echo "The workflow works well"
+    - name: Code checkout
+      uses: actions/checkout@v4
+
+    - name: Maven test
+      run: mvn test
+
+    - name: Checkstyle
+      run: mvn checkstyle:checkstyle
