--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,6 +51,7 @@ jobs:
 
     # Build application
   BUILD_AND_PUBLISH:
+    needs: Testing
     runs-on: ubuntu_latest
     steps:
       - name: Code chekout
