--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -70,7 +70,7 @@ jobs:
           registry: ${{ secrets.REGISTRY }}
           repo: kofiitapp
           region: ${{ env.AWS_REGION }}
-          auto_tag: latest,${{ github.run_number }}
+          tags: latest,${{ env.AWS_REGION }}
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
