--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -62,15 +62,14 @@ jobs:
           sed -i "s/^jdbc.password.*$/jdbc.password\=${{ secrets.RDS_PASS }}/" src/main/resources/application.properties
           sed -i "s/db01/${{ secrets.ENDPOINT }}/" src/main/resources/application.properties
 
-      - name: Build & upload image to ECR
+      - name: Build & Upload image to ECR
         uses: appleboy/docker-ecr-action@master
         with:
           access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          registry: ${{ secrets.REGISTRY }}
           repo: kofiitapp
           region: ${{ env.AWS_REGION }}
-          tags: latest,${{ env.AWS_REGION }}
+          tags: latest
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
